文件类型swagger的注解书写 用户头像上传 功能完成
